WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75305
Inline flow not learning height of all text descendants
https://bugs.webkit.org/show_bug.cgi?id=75305
Summary
Inline flow not learning height of all text descendants
Robert Hogan
Reported
2011-12-28 04:44:25 PST
Example provided by mitz: <span style="outline: 1px dotted blue;"> <span style="margin: 0 10px;"></span> text</span> The line is only 1px in height and the text is not displayed. This happens because the root inline box does not learn of the existence of the 'text' run when calculating the line's height.
Attachments
Patch
(4.79 KB, patch)
2011-12-28 05:16 PST
,
Robert Hogan
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2011-12-28 05:16:34 PST
Created
attachment 120655
[details]
Patch
Robert Hogan
Comment 2
2011-12-28 11:19:01 PST
Committed
r103772
: <
http://trac.webkit.org/changeset/103772
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug