Inline flow not learning height of all text descendants https://bugs.webkit.org/show_bug.cgi?id=75305

Reviewed by Dan Bernstein.

Source/WebCore:

Tests: fast/inline/nested-text-descendants-expected.html
       fast/inline/nested-text-descendants.html

The root inline box would only learn it had text descendants if its first grandchild
was text. It wasn't informed of subsequent text grandchildren so could not factor them
into its calculation of the line height.
To fix this, propagate the existence of a text descendant to the root inline box
by walking up through the text child's ancestors.

* rendering/InlineFlowBox.cpp:
(WebCore::setHasTextDescendantsOnAncestors):
(WebCore::InlineFlowBox::addToLine):
* rendering/InlineFlowBox.h:
(WebCore::InlineFlowBox::setHasTextDescendants):

LayoutTests:

* fast/inline/nested-text-descendants-expected.html: Added.
* fast/inline/nested-text-descendants.html: Added.

Canonical link: https://commits.webkit.org/92073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103772 268f45cc-cd09-0410-ab3c-d52691b4dbfc