Source/WebCore/rendering/InlineFlowBox.h
@@ -192,6 +192,7 @@ public:
 
     bool hasTextChildren() const { return m_hasTextChildren; }
     bool hasTextDescendants() const { return m_hasTextDescendants; }
+    void setHasTextDescendants() { m_hasTextDescendants = true; }
 
     void checkConsistency() const;
     void setHasBadChildList();
